--- a/libs/x500-auth-ts/package.json
+++ b/libs/x500-auth-ts/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@wildboar/x500-auth",
     "version": "0.2.0",
-    "type": "commonjs"
+    "type": "commonjs",
+    "license": "MIT"
 }
