Publish x500-client-ts

--- a/.github/workflows/meerkat.yml
+++ b/.github/workflows/meerkat.yml
@@ -147,6 +147,7 @@ jobs:
           - 'rose-transport'
           - 'osi-net'
           - 'ocsp-client'
+          - 'x500-client-ts'
           - 'x500-auth-ts'
     steps:
       - name: Checkout
