--- a/.github/workflows/quipu.yml
+++ b/.github/workflows/quipu.yml
@@ -71,6 +71,8 @@ jobs:
         run: helm repo add ${{ env.CHART_REPO }} https://${{ env.STORAGE_ACCOUNT_NAME }}.blob.core.windows.net/${{ env.CHART_CONTAINER }}
       - name: Update Helm Repo Index
         run: helm repo update
+      - name: Uninstall Quipu DSA via Helm
+        run: helm uninstall quipu-demo || true
       - name: Deploy Quipu DSA via Helm
         # Set log_level to "info" because logging slows down Meerkat DSA
         # considerably, even though it would be nice to have more output.
@@ -78,7 +80,7 @@ jobs:
           helm install quipu-demo ${{ env.CHART_REPO }}/${{ env.CHART_NAME }} \
             -f values_override.yaml \
             --set fullnameOverride=quipu-demo \
-            --service.type=LoadBalancer \
+            --set service.type=LoadBalancer \
             --atomic \
             --namespace=${{ env.NAMESPACE }}
       - name: Wait 30 Seconds for Public IP to be Allocated
