Fix Quipu workflow

--- a/.github/workflows/meerkat.yml
+++ b/.github/workflows/meerkat.yml
@@ -2,13 +2,13 @@ name: Meerkat DSA Workflow
 
 on:
   push:
-    # tags:
-    #   - v3.*
-    #   - v2.*
-    #   - v1.*
+    tags:
+      - v3.*
+      - v2.*
+      - v1.*
     # Temporary, so I don't have to keep adding BS tags.
-    branches:
-      - master
+    # branches:
+    #   - master
 
 env:
   CLUSTER_NAME: production
