--- a/.github/workflows/quipu.yml
+++ b/.github/workflows/quipu.yml
@@ -1,8 +1,8 @@
 name: Quipu
 on:
   schedule:
-  # 19:00 UTC every day
-  - cron: "0 19 * * *"
+  # 19:20 UTC every day
+  - cron: "20 19 * * *"
 
 env:
   CLUSTER_NAME: production
@@ -77,7 +77,7 @@ jobs:
         # Set log_level to "info" because logging slows down Meerkat DSA
         # considerably, even though it would be nice to have more output.
         run: |
-          helm install quipu-demo ${{ env.CHART_REPO }}/${{ env.CHART_NAME }}:0.2.4 \
+          helm install quipu-demo ${{ env.CHART_REPO }}/${{ env.CHART_NAME }} \
             -f values_override.yaml \
             --set fullnameOverride=quipu-demo \
             --set service.type=LoadBalancer \
