--- a/.github/workflows/meerkat.yml
+++ b/.github/workflows/meerkat.yml
@@ -779,8 +779,6 @@ jobs:
       - name: Create Values Override File
         run: echo "${{ env.VALUES_OVERRIDE }}" > values_override.yaml
       - name: Deploy Meerkat DSA via Helm
-        # Set log_level to "info" because logging slows down Meerkat DSA
-        # considerably, even though it would be nice to have more output.
         run: |
           helm install meerkat-dsa-${{ matrix.dmd }} ${{ env.CHART_REPO }}/${{ env.CHART_NAME }} \
             -f values_override.yaml \
@@ -789,7 +787,7 @@ jobs:
             --set fullnameOverride=meerkat-${{ matrix.dmd }} \
             --set service.type=LoadBalancer \
             --set adminService.type=LoadBalancer \
-            --set log_level=info \
+            --set log_level=debug \
             --set "my_access_point_nsaps={idms://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:44632,idm://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:4632,ldaps://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:636,ldap://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:389}" \
             --set min_auth_level_for_chaining=0 \
             --set min_auth_local_qualifier_for_chaining=0 \
