Add more logging around chaining

--- a/.github/workflows/meerkat.yml
+++ b/.github/workflows/meerkat.yml
@@ -812,6 +812,8 @@ jobs:
             --set tcp_timeout_in_seconds=300 \
             --set min_transfer_speed_bytes_per_minute=10 \
             --set remote_pwd_time_limit=15 \
+            --set scr_parallelism=2 \
+            --set lcr_parallelism=2 \
             --atomic \
             --namespace=${{ env.NAMESPACE }}
       - name: Wait 30 Seconds for Public IP to be Allocated
