--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -179,7 +179,7 @@ open_top_level: false
 prohibit_chaining: false
 remote_pwd_time_limit: 0
 reveal_user_pwd: false
-src_parallelism: 0
+scr_parallelism: 0
 # scvp_attr_cert_checks:
 #   - "2.5.4.3"
 # scvp_attr_cert_want_backs:
