--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -295,6 +295,7 @@ tls_request_ocsp: false
 transcode_distinguished_values_to_der: true
 transcode_values_to_der: true
 # trust_anchors_file: signingTrustAnchorListConfigName
+# trust_for_ibra: "SUPR"
 use_database_when_there_are_x_subordinates: 1000
 # vendor_name: ""
 # vendor_version: ""
