--- a/k8s/charts/meerkat-dsa/templates/deployment.yaml
+++ b/k8s/charts/meerkat-dsa/templates/deployment.yaml
@@ -437,6 +437,12 @@ spec:
                   name: {{ include "meerkat-dsa.fullname" . }}-config
                   key: max_pre_bind_requests
                   optional: true
+            - name: MEERKAT_MAX_RELAXATIONS
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ include "meerkat-dsa.fullname" . }}-config
+                  key: max_relaxations
+                  optional: true
             - name: MEERKAT_MIN_AUTH_LEVEL_FOR_CHAINING
               valueFrom:
                 configMapKeyRef:
