--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -162,6 +162,7 @@ max_connections_per_address: 100
 max_idm_pdu_size: "1000000"
 max_idm_segments: 10
 max_pre_bind_requests: 0
+max_relaxations: 3
 min_auth_level_for_chaining: 1
 min_auth_level_for_ob: 1
 min_auth_local_qualifier_for_chaining: 0
