Do not run some jobs on every push to master

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,14 +1,14 @@
 name: Docs Workflow
 
 on:
-  # push:
-  #   tags:
-  #     - v3.*
-  #     - v2.*
   push:
-    branches:
-      - main
-      - master
+    tags:
+      - v3.*
+      - v2.*
+  # push:
+  #   branches:
+  #     - main
+  #     - master
 
 jobs:
 
