Do not deploy on push

--- a/.github/workflows/meerkat.yml
+++ b/.github/workflows/meerkat.yml
@@ -7,8 +7,8 @@ on:
       - v2.*
     #   - v1.*
     # Temporary, so I don't have to keep adding BS tags.
-    branches:
-      - master
+    # branches:
+    #   - master
 
 env:
   CLUSTER_NAME: production
