--- a/libs/x500-auth-ts/project.json
+++ b/libs/x500-auth-ts/project.json
@@ -1,4 +1,5 @@
 {
+    "name": "x500-auth-ts",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/x500-auth-ts/src",
     "projectType": "library",
