--- a/.github/workflows/bun.yml
+++ b/.github/workflows/bun.yml
@@ -1,8 +1,8 @@
 name: "Are we Bun yet?"
 on:
   schedule:
-  # 04:05 on the first of every month
-  - cron: "4 5 1 * *"
+  # 04:05 on the first of January
+  - cron: "4 5 1 1 *"
 
 jobs:
   stale:
