--- a/k8s/charts/meerkat-dsa/templates/config.yaml
+++ b/k8s/charts/meerkat-dsa/templates/config.yaml
@@ -9,6 +9,7 @@ data:
   administrator_email: {{ .Values.administrator_email }}
   {{- end }}
   administrator_email_public: {{ .Values.administrator_email_public | default false | ternary 1 0 | quote }}
+  attr_cert_duration: {{ .Values.attr_cert_duration | default 3600 | quote }}
   bind_min_sleep_ms: {{ .Values.bind_min_sleep_ms | quote }}
   bind_sleep_range_ms: {{ .Values.bind_sleep_range_ms | quote }}
   bulk_insert_mode: {{ .Values.bulk_insert_mode | ternary 1 0 | quote }}
