fix: do not create source maps (already created by nx webpack plugin)

--- a/apps/meerkat/tsconfig.app.json
+++ b/apps/meerkat/tsconfig.app.json
@@ -5,7 +5,8 @@
         "module": "esnext",
         "types": ["node"],
         "esModuleInterop": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "sourceMap": false
     },
     "exclude": [
         "**/*.spec.ts",
