--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     # image: ghcr.io/wildboar-software/meerkat-dsa:latest
     build:
       context: ..
-      dockerfile: meerkat.dockerfile
+      dockerfile: meerkat.test.dockerfile
     # env_file:
     #   - .env
     environment:
