--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -47,7 +47,7 @@
             // ]
         },
         {
-            "type": "pwa-node",
+            "type": "node",
             "request": "attach",
             "port": 29229,
             "name": "Attach to DSA2",
@@ -56,7 +56,25 @@
             ],
             "outFiles": [
                 "${workspaceFolder}/dist/apps/meerkat/**/*.js"
-            ]
+            ],
+            // "sourceMapPathOverrides": {
+            //     "/srv/meerkat/*": "${workspaceRoot}/dist/apps/meerkat/*"
+            // },
+            "sourceMaps": true,
+            "localRoot": "${workspaceFolder}/dist/apps/meerkat",
+            // "localRoot": "${workspaceFolder}/dist/apps/meerkat",
+            "remoteRoot": "/srv/meerkat",
+            "resolveSourceMapLocations": [
+                "/srv/meerkat/*",
+                "${workspaceFolder}/dist/apps/meerkat/**",
+                "${workspaceFolder}/apps/meerkat/**",
+                "!**/node_modules/**",
+            ],
+            // "resolveSourceMapLocations": [
+            //     "/srv/meerkat/*",
+            //     // "${workspaceFolder}/dist/apps/meerkat/**",
+            //     "!**/node_modules/**"
+            // ]
         }
     ]
 }
