--- a/apps/x500-cli/tsconfig.app.json
+++ b/apps/x500-cli/tsconfig.app.json
@@ -3,7 +3,8 @@
     "compilerOptions": {
         "outDir": "../../dist/out-tsc",
         "module": "commonjs",
-        "types": ["node"]
+        "types": ["node"],
+        "sourceMap": true
     },
     "exclude": ["**/*.spec.ts", "jest.config.ts"],
     "include": ["**/*.ts"]
