--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -108,6 +108,8 @@ services:
       MEERKAT_IDM_BUFFER_SIZE: "1000000000"
       MEERKAT_MAX_IDM_PDU_SIZE: "1000000000"
       MEERKAT_MAX_IDM_SEGMENTS: 100
+      # I already know my schema is valid. We just need an environment that can come up quickly.
+      MEERKAT_BULK_INSERT_MODE: 1
       # MEERKAT_INIT_JS: /data/init.mjs
     hostname: 'dsa2'
     labels:
@@ -176,15 +178,19 @@ services:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     # command: --default-authentication-plugin=mysql_native_password --slow-query-log=ON --slow-query-log-file=/var/lib/mysqllog/slow.log --long-query-time=2
-    # restart: always
-    # This gets rid of the "mbind: Operation not permitted" error message in the MySQL logs.
-    # See: https://thegeekbin.com/mbind-operation-not-permitted-docker-mysql/
+    # restart: always;
+
+    # The healthcheck causes this error message:
+    # Plugin sha256_password reported: ''sha256_password' is deprecated and will be removed in a future release.
+    # There is no way around this other than to not have a health check.
     healthcheck:
-      test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
+      test: mysqladmin ping -h 127.0.0.1 -u root --password=$$MYSQL_ROOT_PASSWORD
       start_period: 5s
       interval: 5s
       timeout: 5s
       retries: 55
+    # This gets rid of the "mbind: Operation not permitted" error message in the MySQL logs.
+    # See: https://thegeekbin.com/mbind-operation-not-permitted-docker-mysql/
     security_opt:
       - "seccomp=unconfined"
     environment:
